--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: CSC 236 Data Structures
+title: CSC 386 Scalable Algorithms and Objects
 description: Berea College
 future: true
