Update course number in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: CSC 386 Scalable Algorithms and Objects
+title: CSC 246 Objects and Scalable Algorithms
 description: Berea College
 future: true
